--- a/CSS/main.css
+++ b/CSS/main.css
@@ -7,7 +7,8 @@
 }
 :root{
     --logo-color: #cec1a8;
-    --logo-background: #0c1017; 
+    --logo-background: #0c1017;
+    --text-color: rgb(135, 143, 151);
 }
 body{
     background-color: #000000;
@@ -41,20 +42,16 @@ ul li{
     }
   }
   /* Large */
-  @media (min-width: 1200px) {
-    .container {
-      width: 1170px;
-    }
-  }
   @media (min-width: 1400px) {
     .container {
-      width: 1350px;
+      width: 1395px;
     }
   }
 /* Start Main page */
 /* Start header */
 header{
-    border-bottom: 2px solid var(--logo-color);
+    border-bottom: 1px solid #847a67;
+    box-shadow: var(--logo-color) 0 0 20px 0;
     max-height: -moz-fit-content;
     max-height: fit-content;
     .container{
@@ -74,13 +71,12 @@ header{
                     }
                 }
             }
-            & a{
-                height: 100px;
+            .title{
                 text-align: center;
                 display: flex;
                 flex-direction: column;
-                flex-direction: column;
                 align-items: center;
+                margin-left: 85px;
                 & h2{
                     color: var(--logo-color);
                     text-align: center;
@@ -97,49 +93,23 @@ header{
                 }
             }
             & nav{
-                .links{
-                    height: 100px;
-                    ul{
-                        li{
-                            transition: 0.5s;
-                            position: relative;
-                            margin-right: 30px;
-                            a{
-                                display: block;
-                                &:hover{
-                                    &::after{
-                                        transform: scale(1);
-                                    }
-                                }
-                                &::after{
-                                    content: "";
-                                    position: absolute;
-                                    left: -8%;
-                                    bottom: 20%;
-                                    width: 120%;
-                                    height: 2px;
-                                    background-color: var(--logo-color);
-                                    transition: 0.5s;
-                                    transform: scale(0);
-                                }
-                                color: var(--logo-color);
-                                text-transform: capitalize;
-                                font-size: 22px;
-                            }
-                            &:last-child{
-                                margin-right: 30px;
-                            }
-                        }
-                    }
-                    .search{
+                display: flex;
+                align-items: center;
+                    & ul{
+                        height: 50px;
                         display: flex;
                         align-items: center;
-                        & i{
-                            cursor: pointer;
-                            font-size: 20px;
+                        & li{
+                            margin-right: 30px;
+                            &:last-child{
+                                margin-right: 0;
+                            }
+                            & a{
+                                font-size: 22px;
+                                color: var(--logo-color);
+                            }
                         }
                     }
-                }
             }
         }
     }
@@ -147,16 +117,14 @@ header{
             .container{
                 .main-content{
                     flex-direction: column;
-                    .logo{
-                        /* margin-left: -20px; */
-                    }
-                    & a{
+                    .title{
+                        margin-left: 0;
                         & h2{
                             color: black;
-                            & span{
-                                margin-top: -30px;
-                                color: var(--logo-color);
-                            }
+                        }
+                        & p{
+                            margin-top: -40px;
+                            color: var(--logo-color);
                         }
                     }
                 }
@@ -164,4 +132,60 @@ header{
     }
 }
 /* End header */
+/* Start main section */
+.main-section{
+    margin-top: 60px;
+    .container{
+        .main-content{
+            .our-brands{
+                text-align: center;
+                font-size: 30px;
+                letter-spacing: 10px;
+                color: var(--logo-color);
+            }
+            .brand-header{
+                display: flex;
+                justify-content: space-around;
+                text-align: center;
+                margin-top: 50px;
+                color: var(--text-color);
+                border: 1px solid var(--logo-color);
+                background-color: var(--logo-background);
+                & li{
+                    width: calc(100%/3);
+                    padding: 15px 0;
+                    transition: 0.5s;
+                    position: relative;
+                    &:nth-child(2){
+                        border-right: 1px solid var(--logo-color);
+                        border-left: 1px solid var(--logo-color);
+                    }
+                    &:hover{
+                        cursor: pointer;
+                        background-color: var(--logo-color);
+                        color: var(--logo-background);
+                        .fa-caret-down{
+                            color: var(--logo-color);
+                        }
+                    }
+                    & i{
+                        margin-bottom: 10px;
+                    }
+                    & p{
+                        font-size: 20px;
+                    }
+                    .fa-caret-down{
+                        position: absolute;
+                        bottom: -35%;
+                        left: 50%;
+                        transform: translateX(-50%);
+                        font-size: 30px;
+                        transition: 0.5s;
+                    }
+                }
+            }
+        }
+    }
+}
+/* End main section */
 /* End Main page */
