--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,6 +18,7 @@ body{
     background-image: url(/media/photos/maxresdefault.jpg);
     background-size: 140%;
     background-position: center;
+    background-repeat: no-repeat;
     &::after{
         content: "";
         position: absolute;
@@ -27,6 +28,10 @@ body{
         height: 100%;
         z-index: -1;
         background-color: rgba(0, 0, 0, 0.521);
+    }
+    @media(max-width: 1290px){
+        background-image: none;
+        background-color: black;
     }
 }
 .container {
@@ -65,7 +70,7 @@ body{
         /* Start logo */
         .legend-image{
             position: absolute;
-            top: -50%;
+            top: -40%;
             width: 20%;
             margin: 0;
             & img{
@@ -177,12 +182,36 @@ body{
                     }
                 }
             /* End login*/
-            @media(max-width: 768px){
-                font-size: 10px;
+        }
+    }
+    @media(max-width: 767px){
+        width: 100%;
+        margin: 0;
+        .main-content{
+            .legend-image{
+                display: none;
+            }
+            fieldset{
+                width: 100%;
+                .login{
+                    & h1{
+                        font-size: 30px
+                    }
+                    & form{
+                        .login-email,
+                        .login-pass{
+                            width: 80%;
+                        }
+                        .remember-forget{
+                            width: 80%;
+                            margin-bottom: 25px;
+                        }
+                    }
+                    }
+                }
             }
         }
     }
-}
 /* End Login */
 
 /* Start Main Page */
