--- a/CSS/main.css
+++ b/CSS/main.css
@@ -4,6 +4,7 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 :root{
     --logo-color: #cec1a8;
@@ -13,7 +14,7 @@
 body{
     background-color: #000000;
     color: white;
-    font-family: 'Playfari Display' sans-serif;
+    font-family: "Cairo", sans-serif;
 }
 a{
     text-decoration: none;
@@ -119,11 +120,8 @@ header{
                     flex-direction: column;
                     .title{
                         margin-left: 0;
-                        & h2{
-                            color: black;
-                        }
                         & p{
-                            margin-top: -40px;
+                            margin-top: -10px;
                             color: var(--logo-color);
                         }
                     }
@@ -260,15 +258,17 @@ header{
                             font-size: 25px;
                             text-transform: capitalize;
                             margin-bottom: 10px;
+                            margin-right: 20px;
                             & a{
                                 color: var(--logo-color);
                             }
                             & i{
-                                margin-left: 10px;
+                                margin-right: 10px;
                                 font-size: 15px;
                             }
                         }
                         & p{
+                            margin-right: 20px;
                             font-size: 15px;
                             text-transform: capitalize;
                         }
@@ -277,7 +277,7 @@ header{
                         display: flex;
                         flex-direction: column;
                         position: absolute;
-                        right: 10px;
+                        left: 10px;
                         top: 40%;
                         transform: translateY(-40%);
                         font-size: 18px;
@@ -286,7 +286,7 @@ header{
                         & a{
                             color: var(--logo-color);
                             &:nth-child(2){
-                                margin: 20px 0;
+                                margin: 10px 0;
                             }
                         }
                     }
@@ -333,21 +333,22 @@ footer{
             color: var(--logo-color);
             .footer-logo{
                 position: relative;
-                width: 150px;
+                width: 100px;
+                margin-top: 20px;
                 & img{
                     width: 100%;
                 }
                 & h2{
-                    margin-top: -15px;
-                    margin-bottom: 15px;
+                    /* margin-top: -15px; */
+                    /* margin-bottom: 15px; */
                 }
                 .footer-social{
                     display: flex;
                     flex-direction: column;
+                    position: absolute;
                     top: 60%;
                     left:-30px;
                     transform: translateY(-60%);
-                    position: absolute;
                     & a{
                         font-size: 15px;
                         color: white;
@@ -375,9 +376,9 @@ footer{
             }
             @media (max-width:435px){
                 .footer-logo{
-                    width: 120px;
+                    width: 100px;
                     .footer-social{
-                        top: 190px;
+                        top: 200px;
                         left: 50%;
                         transform: translateX(-50%);
                         flex-direction: row;
