--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,7 +11,9 @@
     --logo-background: #0c1017; 
 }
 body{
-    display: flex;
+    background-color: black;
+    font-family: "Cairo", sans-serif;
+    /* display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -32,7 +34,7 @@ body{
     @media(max-width: 1290px){
         background-image: none;
         background-color: black;
-    }
+    } */
 }
 .container {
     padding-left: 15px;
@@ -67,11 +69,10 @@ body{
         justify-content: center;
         align-items: center;
         position: relative;
+        padding-top: 60px;
         /* Start logo */
         .legend-image{
-            position: absolute;
-            top: -40%;
-            width: 20%;
+            width: 200px;
             margin: 0;
             & img{
                 max-width: 100%;
@@ -109,7 +110,6 @@ body{
                         margin-top: -30px;
                         margin-bottom: 30px;
                         font-size: 40px;
-                        font-family: "Playfair display", sans-serif;
                     }
                     & form{
                         display: flex;
@@ -188,8 +188,13 @@ body{
         width: 100%;
         margin: 0;
         .main-content{
+            padding-top: 0;
             .legend-image{
-                display: none;
+                /* display: none; */
+                width: 130px;
+                margin-top: 20px;
+                margin-bottom: -20px;
+                /* border: 1px solid white; */
             }
             fieldset{
                 width: 100%;
