--- a/CSS/main.css
+++ b/CSS/main.css
@@ -96,18 +96,42 @@ header{
             & nav{
                 display: flex;
                 align-items: center;
+                height: 150px;
                     & ul{
                         height: 50px;
                         display: flex;
                         align-items: center;
+                        height: inherit;
                         & li{
                             margin-right: 30px;
+                            height: inherit;
                             &:last-child{
                                 margin-right: 0;
                             }
                             & a{
+                                display: flex;
+                                align-items: center;
+                                height: inherit;
                                 font-size: 22px;
                                 color: var(--logo-color);
+                                position: relative;
+                                &:hover{
+                                    &::after{
+                                        transform: scale(1);
+                                        transform-origin: left;
+                                    }
+                                }
+                                &::after{
+                                    content: "";
+                                    position: absolute;
+                                    bottom: 50px;
+                                    width: 100%;
+                                    height: 2px;
+                                    background-color: var(--logo-color);
+                                    transition: transform 0.5s;
+                                    transform: scale(0);
+                                    transform-origin: right;
+                                }
                             }
                         }
                     }
